--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,9 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+MLDATA2_STATIC.CSV
+MLDATA2_data.CSV
+UtilityDropDistribution.png
+*.png
+*.CSV
+MLDATA2_data.xlsx
