--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ UtilityDropDistribution.png
 *.png
 *.CSV
 MLDATA2_data.xlsx
+data/MLDATA2_data_plots.xlsx
+data/Random_with_diffrent_Increase_for_each_rule_plots.xlsx
