--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ UtilityDropDistribution.png
 MLDATA2_data.xlsx
 data/MLDATA2_data_plots.xlsx
 data/Random_with_diffrent_Increase_for_each_rule_plots.xlsx
+*.class
